Improved colours of Prettify (source code) to improve appearance and resolve contrast issues.

--- a/src/js/sass/prettify.scss
+++ b/src/js/sass/prettify.scss
@@ -9,16 +9,16 @@
 .pln { color: #000 }  /* plain text */
 
 @media screen {
-  .str { color: #080 }  /* string content */
-  .kwd { color: #008 }  /* a keyword */
+  .str { color: #2F6D2F; }  /* string content - from #080 */
+  .kwd { color: #024B6E; }  /* a keyword - from #008 */
   .com { color: #800 }  /* a comment */
   .typ { color: #606 }  /* a type name */
   .lit { color: #066 }  /* a literal value */
   /* punctuation, lisp open bracket, lisp close bracket */
   .pun, .opn, .clo { color: #660 }
-  .tag { color: #008 }  /* a markup tag name */
+  .tag { color: #125B7E; }  /* a markup tag name - from #008 */
   .atn { color: #606 }  /* a markup attribute name */
-  .atv { color: #080 }  /* a markup attribute value */
+  .atv { color: #2F6D2F; }  /* a markup attribute value - from #080 */
   .dec, .var { color: #606 }  /* a declaration; a variable name */
   .fun { color: red }  /* a function name */
 }
@@ -36,22 +36,37 @@
   .atv { color: #060 }
 }
 
-/* Put a border around prettyprinted code snippets. */
-pre.prettyprint { padding: 2px; border: 1px solid #888 }
+pre.prettyprint {
+	background-color: #f5f5f5;
+	border: 1px solid #ddd;
+	border-radius: 3px;
+	color: #707070;
+	font-size: 95%;
+	padding: 8px;
+}
 
 /* Specify class=linenums on a pre to get line numbering */
-ol.linenums { margin-top: 0; margin-bottom: 0 } /* IE indents via margin-left */
-li.L0,
+pre.prettyprint.linenums {
+	box-shadow: 40px 0 0 #FBFBFC inset, 41px 0 0 #eee inset;
+}
+ol.linenums {
+	margin: 0 0 0 32px !important;
+}
+ol.linenums li {
+	padding-left: 10px;
+	text-shadow: 0 1px 0 #fff;
+}
+/*li.L0,
 li.L1,
 li.L2,
 li.L3,
 li.L5,
 li.L6,
 li.L7,
-li.L8 { list-style-type: none }
+li.L8 { list-style-type: none }*/
 /* Alternate shading for lines */
-li.L1,
+/*li.L1,
 li.L3,
 li.L5,
 li.L7,
-li.L9 { background: #eee }
+li.L9 { background: #eee }*/
